# logging-tee

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml  testpypi.yml
examples/: demo.py  otherfile.py
src/logging_tee/: __init__.py  tee.py
tests/: test_demo_behavior.py  test_same_process_overwrite.py
