[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logging-tee"
authors = [
    { name = "Jason Rich Darmawan" },
]
version = "1.0.8"
description = "Logging utilities that work well with tqdm"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["tqdm"]

[project.urls]
Source = "https://github.com/jasonrichdarmawan/logging-tee"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]